--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
      font-size: 10px;
      background-color: rgb(216, 216, 216);
      padding: 2vh 0 3vh 0;
-     overflow-y: hidden;
+     overflow-x: hidden;
  }
 
 
